<resources>
    <string name="app_name">BetApp</string>
    <string name="facebook_application_id" translatable="false">192198271175184</string>
    <string name="activity_bet_list">Your bets</string>
    <string name="activity_friends_list">Friends</string>
    <string name="activity_create_bet">Create bet</string>
    <string name="activity_bet_details">Bet details</string>
    <string name="activity_bet_participants">Bet participants</string>
    <string name="activity_add_participants">Add participants</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="reward">Reward</string>
    <string name="create">Create</string>
    <string name="see_participants">See Participants</string>
    <string name="add_participants">Add Participants</string>
    <string name="invite_friends">Invite friends</string>
    <string name="save">Save</string>
    <string name="favorite">Favorite</string>
    <string name="friends_list">Friends list</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="prediction">Your Prediction</string>
    <string name="declare_winners">Declare Winners</string>
    <string name="empty_friend_list">No available friends found</string>
    <string name="empty_favorite_bets_list">No bets marked as favorite</string>
    <string name="bet_deleted">Bet deleted</string>
    <string name="bet_deletion_failed">Bet deletion failed. Please try again.</string>
    <string name="bet_updated">Bet updated</string>
    <string name="bet_update_failed">Update failed. Please check your data and try again.</string>
    <string name="bet_data_corrupted">Bet data corrupted. Please refresh bet list.</string>
    <string name="load_friends_failed">Error loading friends</string>
    <string name="load_participants_failed">Error loading participants</string>
    <string name="load_bets_failed">Error loading bets</string>
    <string name="load_bet_failed">Loading bet failed. Please try again</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="invalid_favorite_bet">Invalid bet. Please refresh data from the app</string>
    <string name="to_get_started_log_in">To get started,\nLog in using Facebook</string>
    <string name="no_connectivity">No internet access. Please check your connectivity</string>
    <string name="content_description_home_screen_background">Home screen background</string>
    <string name="content_description_user_avatar_image">User avatar image</string>
    <string name="content_description_start_image_meaning_bet_is_favorite">Start image meaning bet is favorite</string>
    <string name="content_description_start_image_meaning_participant_is_winner">Start image meaning participant is winner</string>
    <string name="favorite_bets">Favorite bets</string>
    <string name="get_started">Get started</string>
</resources>
