<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingEnd="@dimen/activity_horizontal_margin"
              android:paddingStart="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            style="@style/Container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                style="@style/Text.Label.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"/>

            <TextView
                android:id="@+id/textView_title"
                style="@style/Text.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/Text.Label.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/textView_description"
                style="@style/Text.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/Text.Label.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reward"/>

            <TextView
                android:id="@+id/textView_reward"
                style="@style/Text.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_show_participants"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/see_participants"/>

                <Button
                    android:id="@+id/button_add_participants"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/add_participants"/>

            </LinearLayout>

            <EditText
                android:id="@+id/editText_prediction"
                style="@style/Input.Body.Multiline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prediction"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>