<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingEnd="@dimen/activity_horizontal_margin"
              android:paddingStart="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            style="@style/Container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_title"
                style="@style/Input.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:maxLines="@integer/input_single_line"/>

            <EditText
                android:id="@+id/editText_description"
                style="@style/Input.Body.Multiline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"/>

            <EditText
                android:id="@+id/editText_reward"
                style="@style/Input.Body.Multiline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reward"/>

            <Button
                android:id="@+id/button_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>